# book_parser

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
src/book_parser/: BookParser.py  PrefixTreeNode.py  book_parser.py
src/book_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .coverage  test_BookParser.py  test_PrefixTreeNode.py  test_book_parser.py
