[metadata]
name = book_parser
description = Prefix-tree-based text story analyser
author = aventadoroqwerty@gmail.com
license = MIT
license_file = LICENSE
platforms = win32, win64
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    book_parser
;install_requires =
;    requests>=2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no