[metadata]
name = book_parser
description = Prefix-tree-based text story analyser
author = aventadoroqwerty@gmail.com
license = MIT
license_file = LICENSE
platforms = win32, win64
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    book_parser
;install_requires =
;    requests>=2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    tox>=4.4.5
    pytest>=7.2.1
    pytest-cov>=4.0.0
    mypy>=1.0.0
    flake8>=6.0.0

[options.package_data]
book_parser = py.typed

[flak8]
max-line-length = 80